# ros2_ws_nasa

./: .gitignore  ESPtest.py  apriltag_dist.txt  apriltagnav2_params.yaml  ceiling_filter.py  change_frame.py  cloud_msbuild.msg  cloud_registered.msg  cloud_uni.msg  cyclonedds.xml  full2_diff.txt  imu_odom.py  imutime_hist.py  lasermap.msg  lidar_points.msg  nav2_pointlio.yaml  pointcloud_to_laserscan.yaml  pointcloud_to_laserscan_logged.yaml  pointcloud_to_laserscan_uni.yaml  pointcloud_to_laserscan_unitree.yaml  pointcloud_to_laserscan_unitree_logged.yaml  readme.txt  readme_apriltag.txt  readme_pointlio.txt  readme_realsense.txt  readme_ros2.txt  readme_ros2cheat.txt  readme_seg.txt  readme_test.txt  readme_tf.txt  scan.msg  scan_filter.yaml  scan_filtered.msg  scan_inf.msg  scan_msbuild.msg  scan_msbuild2.msg  scan_unibag3.msg  slam_async_pointlio.yaml  slam_async_pointlio_uni.yaml  start_apriltaggazebo.sh  (+25 more)
camera_info/: my_camera.yaml  panda2_logitech.yaml  panda6_webcam.yaml
unilidar_sdk2/unitree_lidar_ros2/install/: local_setup.sh  setup.sh
unilidar_sdk2/unitree_lidar_ros2/log/: latest_build
unilidar_sdk2/unitree_lidar_ros2/src/unitree_lidar_ros2/: CMakeLists.txt
unilidar_sdk2/unitree_lidar_ros2/src/unitree_lidar_ros2/include/: unitree_lidar_ros2.h
unilidar_sdk2/unitree_lidar_ros2/src/unitree_lidar_ros2/launch/: launch.py  launch_systime.py
ws_pointlio/: sabertooth.yaml  segmentation_params.yaml
ws_pointlio/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws_pointlio/log/: latest_build
ws_pointlio/src/: lidar.msg  map.msg  scan.msg
ws_pointlio/src/deeplab_segmentation_ros2/: README.md  package.xml  readme_seg.txt  setup.cfg  setup.py
ws_pointlio/src/deeplab_segmentation_ros2/config/: segmentation_params.yaml
ws_pointlio/src/deeplab_segmentation_ros2/deeplab_segmentation_ros2/: download_checkpoint.py  segmentation_node.py
ws_pointlio/src/deeplab_segmentation_ros2/launch/: segmentation.launch.py
ws_pointlio/src/esp32_actuator_control/: package.xml  setup.cfg  setup.py
ws_pointlio/src/esp32_actuator_control/esp32_actuator_control/: actuator_control_node.py
ws_pointlio/src/esp32_actuator_control/launch/: actuator_control.launch.py
ws_pointlio/src/fiducial_tb3_gazebo_demo/: README.md  package.xml  setup.cfg  setup.py
ws_pointlio/src/fiducial_tb3_gazebo_demo/config/: apriltag.yaml  apriltag_15.yaml  apriltag_20.yaml  apriltag_40.yaml  global_anchor.yaml  slam_toolbox_mapping.yaml
ws_pointlio/src/fiducial_tb3_gazebo_demo/fiducial_tb3_gazebo_demo/: global_anchor_node.py  go_publisher.py
ws_pointlio/src/fiducial_tb3_gazebo_demo/launch/: anchor.launch.py  sim_mapping_anchor.launch.py  spawn_turtlebot3.launch.py
ws_pointlio/src/fiducial_tb3_gazebo_demo/models/apriltag_cube_0/: model.config  model.sdf
ws_pointlio/src/fiducial_tb3_gazebo_demo/models/apriltag_cube_0/materials/scripts/: tag.material
ws_pointlio/src/fiducial_tb3_gazebo_demo/models/apriltag_cube_1/: model.config  model.sdf
ws_pointlio/src/fiducial_tb3_gazebo_demo/models/apriltag_cube_1/materials/scripts/: tag.material
ws_pointlio/src/fiducial_tb3_gazebo_demo/models/apriltag_cube_2/: model.config  model.sdf
ws_pointlio/src/fiducial_tb3_gazebo_demo/models/apriltag_cube_2/materials/scripts/: tag.material
ws_pointlio/src/fiducial_tb3_gazebo_demo/models/east_wall/: model.config  model.sdf
ws_pointlio/src/fiducial_tb3_gazebo_demo/models/tag_wall/: model.config  model.sdf
ws_pointlio/src/fiducial_tb3_gazebo_demo/models/west_wall/: model.config  model.sdf
ws_pointlio/src/fiducial_tb3_gazebo_demo/models/west_wall/materials/scripts/: tags.material
ws_pointlio/src/fiducial_tb3_gazebo_demo/resource/: fiducial_tb3_gazebo_demo
ws_pointlio/src/fiducial_tb3_gazebo_demo/worlds/: tag_wall_tb3.world
ws_pointlio/src/mdds30_serial_driver/: README.md  package.xml  setup.cfg  setup.py
ws_pointlio/src/mdds30_serial_driver/launch/: mdds30.launch.py
ws_pointlio/src/mdds30_serial_driver/mdds30_serial_driver/: mdds30_node.py.save  test_50pct_node.py
ws_pointlio/src/mdds30_serial_driver/resource/: mdds30_serial_driver
ws_pointlio/src/point_lio_ros2/: ttt.txt
ws_pointlio/src/point_lio_ros2/config/: unilidar_l2.yaml  velody16.yaml
ws_pointlio/src/point_lio_ros2/rviz_cfg/: loam_livox.rviz
ws_pointlio/src/point_lio_ros2/src/: laserMapping.cpp  lasermap1.msg  lasermap3.msg  lasermap4.msg  lasermap5.msg  lasermap6.msg  parameters.cpp  preprocess.cpp
ws_pointlio/src/pointcloud_to_laserscan_logged/: CMakeLists.txt  package.xml
ws_pointlio/src/pointcloud_to_laserscan_logged/launch/: pointcloud_to_laserscan_logged.launch.py
ws_pointlio/src/pointcloud_to_laserscan_logged/src/: pointcloud_to_laserscan_logged_node.cpp  pointcloud_to_laserscan_rock_hole_node.cpp
ws_pointlio/src/pointlio_nav_bridge/: README.md  package.xml  setup.cfg  setup.py
ws_pointlio/src/pointlio_nav_bridge/launch/: pointlio_nav_bridge.launch.py
ws_pointlio/src/pointlio_nav_bridge/pointlio_nav_bridge/: map_and_scan_node.py
ws_pointlio/src/pointlio_tf_bridge/: README.md  package.xml  scan.rviz  scan_baselink.rviz  setup.cfg  setup.py
ws_pointlio/src/pointlio_tf_bridge/launch/: pointlio_tf_bridge.launch.py  pointlio_tf_bridge_uni.launch.py
ws_pointlio/src/pointlio_tf_bridge/pointlio_tf_bridge/: republish_pointlio_tf_as_odom.py
ws_pointlio/src/pointlio_tf_bridge/resource/: pointlio_tf_bridge
ws_pointlio/src/sabertooth_2x32_serial_ros2/: README.md  package.xml  setup.cfg  setup.py
ws_pointlio/src/sabertooth_2x32_serial_ros2/launch/: sabertooth.launch.py
ws_pointlio/src/sabertooth_2x32_serial_ros2/sabertooth_2x32_serial/: driver.py  sabertooth_node.py
ws_pointlio/src/sabertooth_2x32_serial_twist_ros2/: README.md  package.xml  setup.cfg  setup.py
ws_pointlio/src/sabertooth_2x32_serial_twist_ros2/config/: sabertooth_twist.yaml
ws_pointlio/src/sabertooth_2x32_serial_twist_ros2/launch/: sabertooth_twist.launch.py
ws_pointlio/src/sabertooth_2x32_serial_twist_ros2/sabertooth_2x32_serial_twist/: driver.py  sabertooth_twist_node.py
(+36 files in other folders)
