<?xml version="1.0"?>
<package format="3">
  <name>esp32_actuator_control</name>
  <version>0.0.1</version>
  <description>ROS 2 keyboard/joystick actuator control node for ESP32 serial actuator controller.</description>
  <maintainer email="robot@example.com">robot</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
