<?xml version="1.0"?>
<package format="3">
  <name>fiducial_tb3_gazebo_demo</name>
  <version>0.1.0</version>
  <description>TurtleBot3 Waffle + Gazebo classic + slam_toolbox + AprilTag startup anchor demo.</description>
  <maintainer email="user@example.com">OpenAI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
