<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_to_laserscan_logged</name>
  <version>0.0.1</version>
  <description>Convert PointCloud2 to LaserScan with logging of converted point counts.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
