<?xml version="1.0"?>
<package format="3">
  <name>pointlio_nav_bridge</name>
  <version>0.1.0</version>
  <description>Bridge Point-LIO outputs into Nav2-friendly /map and /scan topics, with optional static TF publishers.</description>

  <maintainer email="jwang@vsu.edu">ju wang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
