<?xml version="1.0"?>
<package format="3">
  <name>pointlio_tf_bridge</name>
  <version>0.1.1</version>
  <description>Bridge Point-LIO TF to Nav2-friendly odom/base_link and publish a static base_link to baal/base transform.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
