<?xml version="1.0"?>
<package format="3">
  <name>sabertooth_2x32_serial_twist</name>
  <version>0.2.0</version>
  <description>ROS 2 Python driver for the Dimension Engineering Sabertooth 2x32 motor driver using serial control and Twist /cmd_vel input.</description>
  <maintainer email="user@example.com">OpenAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
